final edit onoh

--- a/lessonbuilder/tool/src/webapp/templates/ShowPage.html
+++ b/lessonbuilder/tool/src/webapp/templates/ShowPage.html
@@ -428,11 +428,12 @@
                           <div class="lessedit">
                             <div class="createdcol">
                               <span class="created"><b>Created By</b> </span> <span class="created" rsf:id="createdname" >
-                              CREATED BY</span>
+                              CREATED BY</span> <span class="created">On</span> <span class="created" rsf:id="createdate">NOW</span>
 							          </div>
 							
 						          	<div class="lastmodifiedcol">
-                              <span class="lastmodified">on </span><span class="lastmodified" rsf:id="createdate" >NOW   </span>
+                              <span class="lastmodified">Last Modified by</span><span class="lastmodified" rsf:id="lastname" >Name</span>
+                              <span class="lastmodified">On</span><span class="lastmodified" rsf:id="lastdate">NOW</span>
                         </div>
 
                             <!-- <p>
